SERVER-50877 Coverity analysis defect 115362: Uninitialized scalar field